tests/paczka1/small_fuzzy/36007732.err
Error in line 4: 0EiFIy S725 94,5
Error in line 1: S312 S168 76,3
